edited Chapter Implementierung and Chapter Signalanalyse

--- a/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
@@ -125,6 +125,7 @@
 \input{211008_MM_T3100_Implementierung - Adapter.tex}				% SubSection
 \input{211008_MM_T3100_Implementierung - Plugin.tex}				% SubSection
 \input{211008_MM_T3100_Implementierung - parrot.tex}					% SubSubSection
+\input{211008_MM_T3100_Implementierung - Controller.tex}					% SubSubSection
 \input{211008_MM_T3100_Implementierung - PosControl.tex}				% SubSubSection
 \input{211008_MM_T3100_Implementierung - calling.tex}					% SubSubSection
 \input{211008_MM_T3100_Implementierung - threading.tex}					% SubSubSection
