--- a/Ausarbeitung/211008_MM_T3100_Hardware - COEX.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - COEX.tex
@@ -117,13 +117,13 @@ s-Bus ??
 
 
 \newSec[COEXPkg]{COEX-Package}{4}
-Für die Interaktion mit der \COEX-Drohne wurden diverse Klassen erstellt, um einzelne Aspekte der Interaktion mit der Drohne umsetzen zu können (siehe refCap{ImplPlugCOEX}).
+Für die Interaktion mit der \COEX-Drohne wurden diverse Klassen erstellt, um einzelne Aspekte der Interaktion mit der Drohne umsetzen zu können (siehe \refCap{ImplPlugCOEX}).
 
 Nach dem Wechsel auf die andere Drohne wurde die Aktualisierung dieses Package nicht weiter verfolgt. Sofern eine Einbindung der \COEX-Drohne in die Ergebnisse dieser \Arbeit\ durchgeführt werden soll, müss dieses Package entsprechend angepasst werden.
 
 
 
-\newSec[COEXPkg]{geeignete Topics}{4}
+\newSec[COEXPkgTopic]{geeignete Topics}{4}
 
 Mit dem \rTopic{blablub} \missing\ kann eine Regelung in der XY-Ebene umgesetzt werden. Die Höhenregelung kann mit set\_attitude/thrust eingeführt werden.
 Somit wäre der Versuch für nachfolgende Studierende sehr viel sicherer und so.
