--- a/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
@@ -111,9 +111,15 @@ Die Übertragung der Video-Daten der beiden Kameras soll an dieser Stelle ledigl
 \newSec[parrotIB]{Inbetriebnahme auf separatem Rechner}{3}
 
 
+\missing[Batterien halten für knapp 1 Minute oder weniger. Neue wurden bestellt, aber waren erst 3 Wochen vor Abgabe verfügbar. In dieser Zeit wurde maßgeblich an der Ausarbeitung geschrieben.]
 
 
 
+
+
+
+
+\newSec[parrotTrouble]{Troubleshooting}{3}
 
 
 
