--- a/Ausarbeitung/211008_MM_T3100_Implementierung - Controller.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - Controller.tex
@@ -1,4 +1,4 @@
-\newSec[ArchDom]{Domain Layer}{2}
+\newSec[ImplPlugController]{\textit{Controller} Package}{3}
 
 
 
@@ -6,16 +6,42 @@
 \newSec{Controllable}{4}
 \newSec{ControlledOutput}{4}
 \newSec[ContrBasic]{Controller\_Basic}{4}
-\newSec[ContrD]{Controller\_D}{4}
-\newSec[ContrI]{Controller\_I}{4}
+
 \newSec[ContrIn]{Controller\_Input}{4}
-\newSec[ContrP]{Controller\_P}{4}
-\newSec[ContrPID]{Controller\_PID}{4}
-\newSec[ContrPT]{Controller\_PT}{4}
+
+
+
+
+
+\newSec[ContrD]{Controller\_x}{4}
+Klassen, welche mit \glqq \CodeClass{Controller\_}\glqq\ beginnen und einen Baustein (vgl. \refCap{Regelerarten}) benennen, implementieren die Funktion des jeweiligen Bausteins.
+
+
 \newSec{ControllerSystem}{4}
+
+
+
 \newSec{ControllerType}{4}
+
+
+
 \newSec{Input}{4}
+
+
+
 \newSec{Inputable}{4}
+
+
+
 \newSec{Output}{4}
+
+
+
+
 \newSec{Outputable}{4}
+
+
+
+
+
 \newSec{TimedDifference}{4}
