--- a/Ausarbeitung/211008_MM_T3100_Implementierung - parrot.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - parrot.tex
@@ -1,30 +1,15 @@
 \newSec[ImplPlugParrot]{\textit{parrot} Package}{3}
 
+Die Klassen in diesem \Pack\ entsprechen der vollständigien Implementierung der virtuellen Klassen des \textit{}-\Pack. Weitere Details sind dem Code zu entnehmen.
 
-
-
-
-\newSec{parrotBattery}{4}
-
-
-
-\newSec{parrotStatus}{4}
-
-
-
-
-\newSec{parrotIMU}{4}
-
-
-
-
-
-\newSec{parrotTransmitter}{4}
-
-
-
-
-\newSec{parrotControl}{4}
+Folgende Klassen sind verfügbar:
+\begin{itemize}
+\item \CodeClass{parrotBattery}
+\item \CodeClass{parrotControl}
+\item \CodeClass{parrotIMU}
+\item \CodeClass{parrotStatus}
+\item \CodeClass{parrotTransmitter}
+\end{itemize}
 
 
 
