edited several chapters:
added some Content to Chapter Ergebnis.
added some Content to Chapter Fazit.
edited Chapter Hardware - Parrot
added Content  to Chapter Implementierung - Controller

--- a/Ausarbeitung/211008_MM_T3100_Fazit.tex
+++ b/Ausarbeitung/211008_MM_T3100_Fazit.tex
@@ -3,3 +3,9 @@
 
 
 
+Im Zuge der Analyse der Flugdaten (siehe \refCap{Flight}) in Kombination mit der Rekonstruktion eines idealisierten Flugverlaufs (siehe \refCap{ControlPosAccel}) zeigte sich, dass sich eine Rekonstruktion der Pose aus Beschleunigungsdaten als schwierig herausstellt.
+
+Um äußeren Einflussen entgegenwirken zu können, wurden divesere Verfahren der Signalverarbeitung herangezogen (vgl. \refCap{ControlPosAccelDisturb}). 
+
+
+
