--- a/Ausarbeitung/211008_MM_T3100_Hardware - COEX.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - COEX.tex
@@ -143,16 +143,16 @@ Das \rTopic{/mavros/rc/override} erlaubt das Überschreiben der RC-Kanäle, somi
 Nachfolgend sollen Internetseiten genannt werden, welche die Einarbeitung in den Umgang mit der \COEX-Drohne vereinfachen können.
 
 \begin{itemize}
-\item https://clover.coex.tech/en/wifi.html
+\item \href{https://clover.coex.tech/en/wifi.html}{https://clover.coex.tech/en/wifi.html}
 
-\item https://clover.coex.tech/en/simple\_offboard.html
-\item https://docs.px4.io/master/en/ros/mavros\_offboard.html
-\item https://docs.px4.io/master/en/flight\_modes/offboard.html
+\item \href{https://clover.coex.tech/en/simple\_offboard.html}{https://clover.coex.tech/en/simple\_offboard.html}
+\item \href{https://docs.px4.io/master/en/ros/mavros\_offboard.html}{https://docs.px4.io/master/en/ros/mavros\_offboard.html}
+\item \href{https://docs.px4.io/master/en/flight\_modes/offboard.html}{https://docs.px4.io/master/en/flight\_modes/offboard.html}
 
-\item https://mavlink.io/en/services/manual\_control.html
-\item http://wiki.ros.org/mavros\#mavros.2FPlugins.manual\_control
+\item \href{https://mavlink.io/en/services/manual\_control.html}{https://mavlink.io/en/services/manual\_control.html}
+\item \href{http://wiki.ros.org/mavros\#mavros.2FPlugins.manual\_control}{http://wiki.ros.org/mavros\#mavros.2FPlugins.manual\_control}
 
-\item https://mavlink.io/en/messages/common.html\#SET\_POSITION\_TARGET\_LOCAL\_NED
+\item \href{https://mavlink.io/en/messages/common.html\#SET\_POSITION\_TARGET\_LOCAL\_NED}{https://mavlink.io/en/messages/common.html\#SET\_POSITION\_TARGET\_LOCAL\_NED}
 \end{itemize}
 
 Spezifische Verweise sind im Quellcode des \COEX-Package hinterlegt.
