--- a/Ausarbeitung/211008_MM_T3100_Signalanalyse.tex
+++ b/Ausarbeitung/211008_MM_T3100_Signalanalyse.tex
@@ -94,7 +94,7 @@ Der Ausreißer nach unten bei etwa 21 s entspricht der Initialisierung der Landu
 
 \newSec[FlightAnalysisOffset]{Offset der Beschleunigungswerte}{3}
 
-Wie \refImg{fig:Flightaxay} entnommen werden kann, sind die Werte für die Bescleunigungen entlang der x- und y-Achsen nicht auf \bzw\ um den Wert 0 kalibriert. Eine Kalibrierung des \Quad[s] wird unmittelbar vor dem Start gesendet und kann auch unabhängig durch eine User-Eingabe ausgelöst werden.
+Wie \refImg{fig:Flightaxay} entnommen werden kann, sind die Werte für die Bescleunigungen entlang der x- und y-Achsen nicht auf den Wert 0 kalibriert. Eine Kalibrierung des \Quad[s] wird unmittelbar vor dem Start gesendet und kann auch unabhängig durch eine User-Eingabe ausgelöst werden.
 
 Die Gravitation ist in \refImg{fig:Flightaz} ablesbar.
 
@@ -114,7 +114,7 @@ Als Ansatz kann hier eine Mittlung der Werte bis zum Senden der Start-Aufforderu
 
 Bei beiden Filtern ist eine deutliche Abweichung ersichtlich.
 
-
+\missing[was ist hier los?]
 entsprechend \refCap{ControlPosAccelOffset} um
 
 Aus der Rekonstruktion in \refImg{fig:FlightHeightReconst} lässt sich zeigen, dass markante Verläufe abgebildet werden können.
@@ -142,11 +142,6 @@ Darüber hinaus ist eine konstante Geschwindigkeit nach der Landung anhand der k
 Das Bild oben zeigt die doppelte Integration von Daten, von welchen eine konstante Abweichung subtrahiert wurde und in blau den gemessenen Höhenverlauf.\\
 Für die Bilder unten wurde auf die abweichungskorrigierten Daten ein Median-Filter (links) und ein Mittelwert-Filter (rechts) angewandt.
 \end{figure}
-
-
-
-
-
 
 
 
