--- a/Ausarbeitung/211008_MM_T3100_Ergebnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ergebnis.tex
@@ -1,5 +1,15 @@
 \newSec{Ergebnis}{1}
 
+Um ein Ergebnis bewerten zu können, wird nachfolgend einer Auswahl aussagekräftiger Daten eines Fluges gezeigt. Hierbei wurden zwei Starts in dem Datendatz durchgeführt. Zur besseren Interpretation wurden Daten entfernt, welche entsprechend der Implementierung irrelevant sind.
+
+Ein Mitschnitt, welcher mittels \textit{rosbag} entstand, ist verfügbar. Die genannten Daten wurden mittels geeigneter Software (\texttt{rosrun BagPlotter parrot} und \texttt{rosbag play <File>.bag}) in menschenlesbare \textit{.txt} Dateien überführt. Diese Daten wurden anschließend zur Ermittlung der von der Implementierung geschätzten Pose genutzt. Dieser Vorgang wurde aus Sicherheitsgründen in einer Simulation (\textit{PosControl/Simulant.cpp}) durchgeführt.
+
+
+
+
+Im Zuge dieses Projekts wurden diverse Sicherheitsfunktionen zum \Quad\ hinzugefügt. Da sich diese \Arbeit\ aus interne Sensoren beschränkt, werden diese als Basis der Sicherheitsfunktionen eingesetzt.
+Aus den übertragenen Daten kann ein Timeout\footnote{Der \textit{Timeout} wird in diesem Projekt mit dem Eingang einer neuen Nachricht ermittelt. Geeigneter wäre das Starten eines Timers beim Eingang einer Nachricht. Verstreicht die Zeit des Timers soll das Landemanöver initialisiert werden.}, sowie ein Zusammenstoß mit einem Objekt ermittelt werden. Als weitere Funktionalität wird ein Absturz auf Grund einer zu geringen Akku-Ladung verhindert. Jedes Sicherheitsfunktion löst das Landemanäver der \Ar\ aus.
+
 
 
 
