--- a/Ausarbeitung/211008_MM_T3100_Implementierung - parrot.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - parrot.tex
@@ -1,6 +1,6 @@
 \newSec[ImplPlugParrot]{\textit{parrot} Package}{3}
 
-Die Klassen in diesem \Pack\ entsprechen der vollständigien Implementierung der virtuellen Klassen des \textit{}-\Pack. Weitere Details sind dem Code zu entnehmen.
+Die Klassen in diesem \Pack\ entsprechen der vollständigien Implementierung der virtuellen Klassen des \textit{DroneController}-\Pack. Weitere Details sind dem Code zu entnehmen.
 
 Folgende Klassen sind verfügbar:
 \begin{itemize}
