edited Chapter Ergebnis
added SubChapter Analyse from previous Chapter Signalverarbeitung.
added SubChapter Signalverarbeitung.
added FlightData to support Images.

--- a/Ausarbeitung/211008_MM_T3100_Ergebnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ergebnis.tex
@@ -1,6 +1,12 @@
 \newSec{Ergebnis}{1}
 
-Um ein Ergebnis bewerten zu können, wird nachfolgend einer Auswahl aussagekräftiger Daten eines Fluges gezeigt. Hierbei wurden zwei Starts in dem Datendatz durchgeführt. Zur besseren Interpretation wurden Daten entfernt, welche entsprechend der Implementierung irrelevant sind.
+Um ein Ergebnis bewerten zu können, wird nachfolgend einer Auswahl aussagekräftiger Daten eines Fluges gezeigt. 
+
+
+
+
+
+Hierbei wurden zwei Starts in dem Datendatz durchgeführt. Zur besseren Interpretation wurden Daten entfernt, welche entsprechend der Implementierung irrelevant sind.
 
 Ein Mitschnitt, welcher mittels \textit{rosbag} entstand, ist verfügbar. Die genannten Daten wurden mittels geeigneter Software (\texttt{rosrun BagPlotter parrot} und \texttt{rosbag play <File>.bag}) in menschenlesbare \textit{.txt} Dateien überführt. Diese Daten wurden anschließend zur Ermittlung der von der Implementierung geschätzten Pose genutzt. Dieser Vorgang wurde aus Sicherheitsgründen in einer Simulation (\textit{PosControl/Simulant.cpp}) durchgeführt.
 
