--- a/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
@@ -63,9 +63,7 @@ Nur geschwindigkeits-Daten. Keine tatsächliche Übergabe von Neigungswinkeln un
 \missing\
 
 
-
-
-
+Entsprechen alle Attribute der \texttt{geometry\_msgs::Twist} Nachricht dem Wert 0, schaltet die \Ar\ in einen Hover-Modus um und versucht, die aktuelle Position zu halten. Zu beachten ist, dass diese Funktion nicht für die Aufgabenstellung herangezogen werden kann, da für den studentischen Laborversuch \textit{Höhenregelung} Daten abweichen des Werts 0 über das \rTopic{cmd\_vel} übermittelt werden.
 
 
 \newSec[parrotTopicsStream]{Video-Streams}{5}
@@ -93,7 +91,7 @@ Die Übertragung der Video-Daten der beiden Kameras soll an dieser Stelle ledigl
 
 \newSec[parrotIB]{Inbetriebnahme auf separatem Rechner}{3}
 
-Der in \refCap{parrotAutonomy} Treiber kann entsprechend folgender Anleitung isntalliert werden:
+Der in \refCap{parrotAutonomy} Treiber kann entsprechend folgender Anleitung isntalliert werden:\\
 \href{https://ardrone-autonomy.readthedocs.io/en/latest/installation.html}{https://ardrone-autonomy.readthedocs.io/en/latest/installation.html}
 
 Für das System werden folgende \ROS-Knoten benötigt:
