--- a/Ausarbeitung/211008_MM_T3100_Positionsregelung Accel.tex
+++ b/Ausarbeitung/211008_MM_T3100_Positionsregelung Accel.tex
@@ -80,7 +80,7 @@ Um das aufgeprägte Rauschen zu erzeugen wurden Zufallszahlen im Bereich [-1, 1]
 \fbox{\includegraphics[width=12cm]{Pictures/Szenario Outlier az.png}}
 \fbox{\includegraphics[width=12cm]{Pictures/Szenario Outlier z.png}}
 \caption{Einfluss von Ausreißern}
-\label{fig:SzeneNoise}
+\label{fig:SzeneOutlier}
 \end{center}
 
 \vspace{0.25cm}
@@ -104,7 +104,7 @@ Die Höhe der aufgeprägten Ausreißer wurde mittel einer Datenreihe von Zufalls
 \fbox{\includegraphics[width=12cm]{Pictures/Szenario Offset az.png}}
 \fbox{\includegraphics[width=12cm]{Pictures/Szenario Offset z.png}}
 \caption{Einfluss von konstanter Nullpunkt-Abweichung}
-\label{fig:SzeneNoise}
+\label{fig:SzeneOffset}
 \end{center}
 
 \vspace{0.25cm}
