--- a/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
@@ -106,12 +106,6 @@
 
 
 \clearpage
-\input{211008_MM_T3100_Signalanalyse.tex}					% Section
-
-
-
-
-\clearpage
 \input{211008_MM_T3100_Architektur.tex}						% Section
 
 
@@ -135,9 +129,9 @@
 
 
 \clearpage
-\input{211008_MM_T3100_Ergebnis.tex}					% Section
-
-
+\input{211008_MM_T3100_Ergebnis.tex}						% Section
+\input{211008_MM_T3100_Ergebnis Fluganalyse.tex}					% SubSection
+\input{211008_MM_T3100_Ergebnis Signalverarbeitung.tex}				% SubSection
 
 
 \clearpage
