--- a/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
@@ -65,12 +65,6 @@
 \input{211008_MM_T3100_Methodik - Software.tex}					% SubSection
 
 
-\clearpage
-\input{211008_MM_T3100_Quadrokopter.tex}					% Section
-
-
-
-
 
 
 \clearpage
@@ -88,6 +82,7 @@
 
 \clearpage
 \input{211008_MM_T3100_Positionsregelung.tex}					% Section
+\input{211008_MM_T3100_Quadrokopter.tex}						% SubSection
 \input{211008_MM_T3100_Positionsregelung Pose.tex}					% SubSection
 \input{211008_MM_T3100_Positionsregelung Accel.tex}					% SubSection
 
@@ -104,16 +99,9 @@
 \input{211008_MM_T3100_Hardware - Parrot.tex}					% SubSection
 
 
-
-\clearpage
-\input{211008_MM_T3100_Architektur.tex}						% Section
-
-
-
-
 \clearpage
 \input{211008_MM_T3100_Implementierung.tex}					% Section
-
+\input{211008_MM_T3100_Architektur.tex}							% SubSection
 \input{211008_MM_T3100_Implementierung - Domain.tex}				% SubSection
 \input{211008_MM_T3100_Implementierung - DroneController.tex}		% SubSection
 \input{211008_MM_T3100_Implementierung - Adapter.tex}				% SubSection
