--- a/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
@@ -63,7 +63,7 @@ Nur geschwindigkeits-Daten. Keine tatsächliche Übergabe von Neigungswinkeln un
 \missing\
 
 
-Entsprechen alle Attribute der \texttt{geometry\_msgs::Twist} Nachricht dem Wert 0, schaltet die \Ar\ in einen Hover-Modus um und versucht, die aktuelle Position zu halten. Zu beachten ist, dass diese Funktion nicht für die Aufgabenstellung herangezogen werden kann, da für den studentischen Laborversuch \textit{Höhenregelung} Daten abweichen des Werts 0 über das \rTopic{cmd\_vel} übermittelt werden.
+Entsprechen alle Attribute der \texttt{geometry\_msgs::Twist}-Nachricht dem Wert 0, schaltet die \Ar\ in einen Hover-Modus um und versucht, die aktuelle Position zu halten. Zu beachten ist, dass diese Funktion nicht für die Aufgabenstellung herangezogen werden kann, da für den studentischen Laborversuch \textit{Höhenregelung} Daten abweichend des Werts 0 über das \rTopic{cmd\_vel} übermittelt werden.
 
 
 \newSec[parrotTopicsStream]{Video-Streams}{5}
