--- a/Ausarbeitung/211008_MM_T3100_Info - Autor.tex
+++ b/Ausarbeitung/211008_MM_T3100_Info - Autor.tex
@@ -18,7 +18,7 @@
 \newcommand{\DHBWLogo}[1][1.5]{\includegraphics[keepaspectratio=true, height=#1cm]{DefaultContent/200803_DefaultDHBW_Logo \DHBWStadt}}
 
 % Ausarbeitung-Informationen
-\newcommand{\AusarbeitungThema}{RaHM-Lab: Positionsregelung eines Quadrocopters zur Risikominimierung von studentischen Laborversuchen}
+\newcommand{\AusarbeitungThema}{Initialsensorenbasierte Positionsregelung eines Indoor-Quadrokopters}
 \newcommand{\AusarbeitungBezeichnung}{T3100}
 \newcommand{\AusarbeitungZeitraum}{6 Monate}
 \newcommand{\AusarbeitungAbgabeDatum}{17.05.2022} % Check again!
