--- a/Ausarbeitung/211008_MM_T3100_Implementierung - Domain.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - Domain.tex
@@ -3,7 +3,6 @@
 Der \textit{Domain Layer} stellt als Teil der \clean\ die Ebene dar, in der allgemein gültige Typen oder Definitionen abgelegt werden können. Nachfolgend werden die Klassen beschrieben, die in diesem Projekt zu dem \textit{Domain Layer} gehören. Sofern nicht anders betitelt, handelt es sich bei den Klassen um Klassen vom Typ \VO.
 
 
-
 \newSec{Optional}{4}
 Die Klasse \CodeClass{Optional} soll dem Ringbuffer ermöglichen, das Nichtvorhandensein von Einträgen darstellen zu können. Diese Klasse ist als \textit{template} implementiert und enthält neben dem Speicherplatz für die generische Instanz einen bool'schen Wert als Validierung.
 Hiermit wird das Arbeit mit \textit{Null-pointern} im Kontext desr Klasse \CodeClass{Ringbuffer} vermieden.
@@ -11,14 +10,12 @@ Hiermit wird das Arbeit mit \textit{Null-pointern} im Kontext desr Klasse \CodeC
 
 
 \newSec{Ringbuffer}{4}
-Die Klasse \CodeClass{Ringbuffer} soll einen Ringspeicher abbilden. Hier wird nicht -wie ner Name vermuten lässt- ein Ringspeicher im Sinne einer ringförmig verketteten Liste implementiert. Diese Klasse Kapselt eine \textit{Standard Template Library} (\textit{STL}) vom Typ \CodeClass{std::vector<T>}, wobei bei Überschreiten der maximalen Anzahl an Elementen das vordere Elemente entfernt wird.
-
+Die Klasse \CodeClass{Ringbuffer} soll einen Ringspeicher abbilden. Hier wird nicht -wie ner Name vermuten lässt- ein Ringspeicher im Sinne einer ringförmig verketteten Liste implementiert. Diese Klasse Kapselt eine \textit{Standard Template Library} (\textit{STL}) vom Typ \CodeClass{std::vector<T>}, wobei bei Überschreiten der maximalen Anzahl an Elementen das vordere Elemente entfernt wird.\\
 \note{Die Implementierung der Klasse \CodeClass{std::vector<T>} sieht vor, neue Elemente an das Ende anzuhängen.}
 
 
 \newSec{TimedValue}{4}
 Die Klasse \CodeClass{TimedValue} soll einen mit einem Zeitstemlep versehenen Wert abbilden. Dies wird durch das Erben von den Klassen \textit{Timestamp} und \CodeClass{Value} umgesetzt.
-
 
 
 \newSec{Timestamp}{4}
@@ -38,6 +35,24 @@ Bei der Klasse \CodeClass{Vector3D} handelt es sich um die Abbildung eines Vekto
 Zudem werden in dieser Klasse grundlegende mathematische Operationen für Vektoren implementiert.
 
 
+\newSec{SafetyChecker}{4}
+\missing[evtl löschen?]
 
 
-\missing[Safety-Kram]
+\newSec{SafetyProvider}{4}
+Die \CodeClass{SafetyProvider} ist in ihrer Funktionalität abgeschlossen.
+Instanzen der \CodeClass{SafetRequirement} werden an einen \textit{SafetyProvider} übergeben. auf Anfrage wird geprüft, ob die übergebenen Instanzen der \CodeClass{SafetRequirement} die erwartungen erfüllen. Ist dies nicht der Fall, wird die \CodeMeth{safetyTriggered} der hinterlegten Instanzen der \CodeClass{SafetReceiver} aufgerufen.
+
+
+\newSec{SafetReceiver}{4}
+Die \textit{full virtual} \CodeClass{SafetReceiver} fordert die Implementierung der \CodeMeth{safetyTriggered}. Hierin definiert die erbende Klasse, wie in Folge einer Verletzung der Sicherheitsanforderungen reagiert werden soll. Allgemein ist hierfür eine Landung des \Quad[s] vorgesehen.
+
+
+\newSec{SafetRequirementy}{4}
+Im Sinne des \textit{Open/Close-Principle} wird die \CodeClass{SafetRequirementy} als virtuelle Klasse eingeführt. Hierdurch werden Eigenschaften und Status \bzw\ Flags des \Quad[s] für Sicherheitsfunktionalitäten zugänglich gemacht.
+
+
+\newSec{SafetyTranslative}{4}
+Eine Instanz der \CodeClass{SafetyTranslative} erhält eine Referenz auf eine Instanz der \CodeClass{SafetyProvider}. Ziel dieser Klasse ist es, die Sicherheitsfunktionalität eines anderen \textit{SafetyProvider} als \textit{SafetRequirementy} einbinden zu können.
+
+
