--- a/Ausarbeitung/211008_MM_T3100_Implementierung - DroneController.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - DroneController.tex
@@ -4,7 +4,56 @@
 \missing\
 
 
-\newSec{AccelToPos}{4}
-\newSec{State}{4}
+\newSec{Batteryable}{4}
 
-\newSec{StateTranslator}{4}
+
+\newSec{DroneControlable}{4}
+
+
+
+\newSec{IMUable}{4}
+
+
+\newSec{IMUState}{4}
+
+
+\newSec{Pose}{4}
+
+
+\newSec{PoseBuildable}{4}
+
+
+\newSec{PoseControlable}{4}
+
+
+\newSec{Rotor}{4}
+
+
+\newSec{Statusable}{4}
+
+
+\newSec{Thrustable}{4}
+
+
+\newSec{Timable}{4}
+
+
+\newSec{}{4}
+
+
+\newSec{}{4}
+
+
+
+
+\newSec{ImpacktOK und ImpacktWatcher}{4}
+
+
+
+\newSec{PercentageOK und VoltageOK}{4}
+
+
+
+
+\newSec{TimeoutOK und WatchDog}{4}
+
