--- a/Ausarbeitung/211008_MM_T3100_Regelsystem Regelkreis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Regelsystem Regelkreis.tex
@@ -22,11 +22,10 @@ Im Allgemeinen grenzen sich die Konzepte \textit{steuern} und \textit{regeln} du
 	I  & Stelleinrichtung      & q & Aufgabengröße             \\
 	J  & Führungsgrößenbildner & r & Rückführgröße            
 \end{tabular}
-\caption{Allgeimeines Schema eines Regelkreises \cite{IEC60050-351}}
+\caption{Allgeimeines Schema eines Regelkreises nach orm \textit{IEC60050-351} \cite{IEC60050-351}}
 \label{fig:Contr}
 \end{center}
 \vspace{0.25cm}
-\refImgShort{fig:Contr} zeigt \missing\
 \end{figure}
 
 
