--- a/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
+++ b/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
@@ -220,9 +220,9 @@ position=top]{caption} 				%Tabellenunterschriften, evtl. Formatieren
 	tabsize=2
 }
 
-\newcommand{\CodePkg}[1]{\texttt{\textit{\textcolor{RedViolet}{#1}}}}
-\newcommand{\CodeClass}[1]{\texttt{\textcolor{CPPStyleKey}{#1}}}
-\newcommand{\CodeMeth}[1]{\texttt{\textcolor{CPPStyleKey}{#1}}}
+\newcommand{\CodePkg}[1]{Package \texttt{\textit{\textcolor{RedViolet}{#1}}}}
+\newcommand{\CodeClass}[1]{Klasse \texttt{\textcolor{CPPStyleKey}{#1}}}
+\newcommand{\CodeMeth}[1]{Methode \texttt{\textcolor{CPPStyleKey}{#1}}}
 \newcommand{\CodeStruct}[1]{\texttt{\textcolor{CPPStyleKey}{#1}}}
 \newcommand{\CodeVar}[1]{\texttt{\textcolor{CPPStyleKey}{#1}}}
 
